Started javascript shell

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="score" id="player-x-score"></div>
         </div>
         <div class="game-space">
-            <div class="gameboard">
+            <div class="gameboard-area">
 
             </div>
             <div class="result-display"></div>
