Confirmed gameboard generates

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
             </div>
             <div class="result-display"></div>
-            <button class="start-button">Start</button>
-            <button class="reset-button">reset-button</button>
+            <div class="game-space-buttons">
+                <button class="start-button">Start</button>
+                <button class="reset-button">reset-button</button>
+            </div>
         </div>
         <div class="player-menu" id="player-o-menu">
             <h2>Player O</h2>
