polished up start/reset/change name buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="content">
         <div class="player-menu" id="player-x-menu">
-            <h2>Player X</h2>
+            <h2 id="player-x-name">Player X</h2>
             <button class="player-name-button" id="player-x-name-button">Change Name</button>
             <img class="x-icon player-icon">
             <h3>Wins</h3>
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="player-menu" id="player-o-menu">
-            <h2>Player O</h2>
+            <h2 id="player-o-name">Player O</h2>
             <button class="player-name-button" id="player-o-name-button">Change Name</button>
             <img class="o-icon player-icon">
             <h3>Wins</h3>
